--- a/config.json
+++ b/config.json
@@ -2,12 +2,13 @@
 	"Prefijo": ".",
 	"MultiIdioma": [true, ""],
 	"Propietario": [
-	["51991378809", "Matt_M", true],
-	["51995386439", "N3K0SM1C", false]
+	["51991378809", "Matt_M", false],
+	["51995386439", "N3K0SM1C", true]
 	],
 	"LocPref": "51",
 	"NombreDelBot": "🅀🅄🄰🄽🅃🅄🄼-🄱🄾🅃",
-	"DBtype": "database.json",
+	"MinimoDeUsuarios": 3,
+	"DBtype": "json",
 	"FakeList": ["20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "60", "61", "62", "63", "64", "65", "66", "67", "68", "69", "7", "80", "81", "82", "83", "84", "85", "86", "87", "88", "89", "90", "91", "92", "93", "94", "95", "96", "97", "98", "99"],
-	"GrupoWa": "https://chat.whatsapp.com/"
+	"GrupoWa": ""
 }
