--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
 		"cfonts": "^3.2.0",
 		"chalk": "^5.3.0",
 		"fluent-ffmpeg": "^2.1.2",
+		"formdata-node": "^5.0.1",
 		"file-type": "^18.5.0",
 		"human-readable": "^0.2.1",
+		"jsdom": "^22.1.0",
 		"jimp": "^0.16.1",
 		"mongoose": "^7.3.1",
 		"moment-timezone": "^0.5.43",
