--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "Quantum-Bot",
+	"name": "Quantum|Bot",
 	"version": "1.2.0",
-	"description": "Bot simple para Whatsapp, con alguno que otro error :v",
+	"description": "Bot simple para Whatsapp, con alguno que otro error, no soy programador :v",
 	"main": "nk.js",
 	"type": "module",
 	"directories": {
