--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Quantum|Bot",
+	"name": "Quantum_Bot",
 	"version": "1.2.0",
 	"description": "Bot simple para Whatsapp, con alguno que otro error, no soy programador :v",
 	"main": "nk.js",
