--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	],
 	"homepage": "",
 	"author": {
-		"name": "Matt_Mdz"
+		"name": "Ne_Kosmic"
 	},
 	"repository": {
 		"type": "git",
@@ -33,7 +33,7 @@
 	},
 	"license": "GPL-3.0",
 	"dependencies": {
-		"@whiskeysockets/baileys": "^6.4.1",
+		"@whiskeysockets/baileys": "^6.5.0",
 		"@adiwajshing/keyed-db": "^0.2.4",
 		"@bochilteam/scraper": "^4.2.4",
 		"axios": "^1.4.0",
