--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"human-readable": "^0.2.1",
 		"jsdom": "^22.1.0",
 		"jimp": "^0.16.1",
+		"lowdb": "^3.0.0",
 		"mongoose": "^7.3.1",
 		"moment-timezone": "^0.5.43",
 		"node-fetch": "^3.3.2",
