--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"axios": "^1.4.0",
 		"cfonts": "^3.2.0",
 		"chalk": "^5.3.0",
+		"express": "^4.18.2",
 		"fluent-ffmpeg": "^2.1.2",
 		"formdata-node": "^5.0.1",
 		"fs-extra": "^11.1.1",
