--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
 	["51991378809", "Matt_M", true],
 	["51995386439", "N3K0SM1C", false]
 	],
-	"NumBot": "",
+	"NumBot": "+ ",
 	"LocPref": "51",
 	"NombreDelBot": "QUANTUM-BOT",
 	"MinimoDeUsuarios": 3,
