--- a/package.json
+++ b/package.json
@@ -1,66 +1,1 @@
-{
-	"name": "Quantum_Bot",
-	"version": "1.3.0",
-	"description": "Bot simple para Whatsapp, con alguno que otro error, no soy programador :v",
-	"main": "nk.js",
-	"type": "module",
-	"directories": {
-		"lib": "lib",
-		"multimedia": "multimedia",
-		"basededatos": "basededatos"
-	},
-	"scripts": {
-		"start": "node nk.js",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"test2": "nodemon nk.js"
-	},
-	"keywords": [
-		"termux-whatsapp-bot",
-		"multi-device",
-		"MD",
-		"baileys-md"
-	],
-	"homepage": "",
-	"author": {
-		"name": "Ne_Kosmic"
-	},
-	"repository": {
-		"type": "git",
-		"url": ""
-	},
-	"bugs": {
-		"url": ""
-	},
-	"license": "GPL-3.0",
-	"dependencies": {
-		"@whiskeysockets/baileys": "^6.5.0",
-		"@adiwajshing/keyed-db": "^0.2.4",
-		"@bochilteam/scraper": "^4.2.4",
-		"axios": "^1.4.0",
-		"cfonts": "^3.2.0",
-		"chalk": "^5.3.0",
-		"express": "^4.18.2",
-		"fluent-ffmpeg": "^2.1.2",
-		"formdata-node": "^5.0.1",
-		"fs-extra": "^11.1.1",
-		"file-type": "^18.5.0",
-		"human-readable": "^0.2.1",
-		"jsdom": "^22.1.0",
-		"jimp": "^0.16.1",
-		"lowdb": "^3.0.0",
-		"mongoose": "^7.3.1",
-		"moment-timezone": "^0.5.43",
-		"node-fetch": "^3.3.2",
-		"node-webpmux": "^3.1.7",
-		"pino": "^8.14.2",
-		"performance-now": "^2.1.0",
-		"qrcode-terminal": "^0.12.0",
-		"qrcode": "^1.5.3",
-		"readline": "^1.3.0",
-		"ws": "^8.13.0",
-		"yargs": "^17.7.2"
-	},
-	"optionalDependencies": {
-		"wa-sticker-formatter": "^4.4.4"
-	}
-}
+{"name":"Quantum_Bot","version":"1.3.5","description":"Bot simple para Whatsapp, con alguno que otro error, no soy programador :v","type":"module","main":"nk.js","directories":{"lib":"lib","multimedia":"multimedia","basededatos":"basededatos"},"scripts":{"start":"node nk.js","neat":"npx prettier --write ."},"keywords":["whatsapp","bot","termux-whatsapp-bot","multi-device","MD","baileys-md"],"author":{"name":"Ne_Kosmic"},"license":"GPL-3.0","dependencies":{"@whiskeysockets/baileys":"^6.6.0","@bochilteam/scraper":"^4.2.4","cfonts":"^3.2.0","chalk":"^5.3.0","express":"^4.18.2","fs-extra":"^11.2.0","file-type":"^19.0.0","formdata-node":"^6.0.3","fluent-ffmpeg":"^2.1.2","jimp":"^0.16.1","jsdom":"^24.0.0","moment-timezone":"^0.5.45","node-fetch":"^3.3.2","node-webpmux":"^3.2.0","qrcode":"^1.5.3"}}
