--- a/config.json
+++ b/config.json
@@ -20,6 +20,7 @@
 		"Whatsapp",
 		"+ "
 	],
+	"Mode": "default",
 	"LocPref": "51",
 	"NombreDelBot": "QUANTUM-BOT",
 	"MinimoDeUsuarios": 3,
@@ -28,7 +29,7 @@
 		"dls": 20,
 		"rdm": 30
 	},
-	"Blacklist": ["20","21","22","23","24","25","26","27","28","29","30","31","32","33","35","36","37","38","39","40","41","42","43","44","45","46","47","48","60","61","63","64","65","66","67","68","69","7","80","81","82","83","84","85","86","87","88","89","90","91","92","93","94","95","96","97","98","99"],
+	"Blacklist": ["20","21","22","23","24","25","26","27","28","29","30","31","32","33","35","36","37","38","39","40","41","42","43","44","45","46","47","48","57","60","61","63","64","65","66","67","68","69","7","80","81","82","83","84","85","86","87","88","89","90","91","92","93","94","95","96","97","98","99"],
 	"AntiFlood": "low",
 	"CanalJid": "120363173007028270@newsletter",
 	"WlcLink": "",
