--- a/config.json
+++ b/config.json
@@ -6,12 +6,12 @@
 	],
 	"Propietario": [
 		[
-			"51991378809",
-			"Matt_Mdz",
+			"2349155556447",
+			"PHEONIX",
 			true
 		],
 		[
-			"51999999999",
+			"2348172971476",
 			"you",
 			false
 		]
