--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
 	],
 	"Mode": "default",
 	"LocPref": "51",
-	"NombreDelBot": "QUANTUM-BOT",
+	"NombreDelBot": "PHEONIX-BOT",
 	"MinimoDeUsuarios": 3,
 	"Limits": {
 		"gms": 10,
