--- a/config.json
+++ b/config.json
@@ -18,11 +18,11 @@
 	],
 	"OptConn": [
 		"Whatsapp",
-		"+ "
+		"+595 972 585468"
 	],
 	"Mode": "default",
 	"LocPref": "51",
-	"NombreDelBot": "QUANTUM-BOT",
+	"NombreDelBot": "Rory kimaris",
 	"MinimoDeUsuarios": 3,
 	"Limits": {
 		"gms": 10,
